<resources>
    <string name="app_name">FoodRecipes</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="food_jokes">Food Jokes</string>
    <string name="floatingbutton">floatingButton</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="like_image">like image</string>
    <string name="time_image">time image</string>
    <string name="leaf_image">leaf image</string>
    <string name="recipe_item_image">recipe item image</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="dessert">Dessert</string>
    <string name="diet_type">Diet Type</string>
    <string name="vegan">Vegan</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole 30</string>
    <string name="apply">Apply</string>
    <string name="search">search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="ingredientimageview">ingredientImageView</string>
    <string name="save_to_favorite">Save To Favorite</string>
    <string name="no_favorite_recipes">No favorite recipes</string>
    <string name="delete_favorite_item">Delete favorite item</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
</resources>