<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardBackground"
    tools:context=".ui.fragments.recipes.bottomsheet.RecipesBottomSheet">


    <TextView
        android:id="@+id/MealTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textColor="@color/titleColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollViewMealType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MealTypeTV">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/mealTypeChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/mainCourse_chip"

                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/mainCourse_chip"
                    style="@style/custom_chip_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course"
                    app:checkedIconEnabled="true"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/sideDish_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/dessert_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/appetizer_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/salad_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/bread_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/breakfast_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/soup_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/beverage_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/sauce_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce" />


                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/marinade_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/fingerfood_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finger_food" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/snack_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/drink_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink" />


            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/DietTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/diet_type"
        android:textColor="@color/titleColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewMealType" />


    <HorizontalScrollView
        android:id="@+id/scrollViewDietType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DietTypeTV">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/dietTypeChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/glutenFree_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/glutenFree_chip"
                    style="@style/custom_chip_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/ketogenic_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/vegetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/vegan_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/pescetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/paleo_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/primal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal" />

                <com.google.android.material.chip.Chip
                    style="@style/custom_chip_style"
                    android:id="@+id/whole30_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole_30" />


            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewDietType" />
</androidx.constraintlayout.widget.ConstraintLayout>