<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="result"
            type="com.example.foodrecipes.data.db.models.entities.RecipeResult" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/recipeItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    onItemClick="@{result}"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/itemCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/lightMediumGray"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/recipeImageView"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                loadImage="@{result.image}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/recipe_item_image" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/courgette"
                android:maxLines="2"
                tools:text="Hello world"
                android:text="@{result.title}"
                android:textColor="@color/darker"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/recipeImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@{result.summary}"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make"
                android:textColor="@color/darkGray"
                app:layout_constraintEnd_toEndOf="@+id/titleTextView"
                app:layout_constraintStart_toStartOf="@+id/titleTextView"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <ImageView
                android:id="@+id/likeImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="36dp"
                android:contentDescription="@string/like_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/likeTextView"
                app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_heart"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/likeTextView"
                setNumberOfLikes="@{result.aggregateLikes}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
                app:layout_constraintTop_toBottomOf="@+id/likeImageView"
                tools:text="100" />

            <ImageView
                android:id="@+id/timeImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/timeTextView"
                app:layout_constraintStart_toStartOf="@+id/timeTextView"
                app:layout_constraintTop_toTopOf="@+id/likeImageView"
                app:srcCompat="@drawable/ic_time"
                app:tint="@color/yellow"
                android:contentDescription="@string/time_image" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="100"
                setNumberOfMinutes="@{result.readyInMinutes}"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                app:layout_constraintStart_toEndOf="@+id/likeTextView"
                app:layout_constraintTop_toBottomOf="@+id/timeImageView" />

            <ImageView
                android:id="@+id/veganImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/veganTextView"
                app:layout_constraintStart_toStartOf="@+id/veganTextView"
                app:layout_constraintTop_toTopOf="@+id/timeImageView"
                app:srcCompat="@drawable/ic_leaf"
                applyVeganColor="@{result.vegan}"
                android:contentDescription="@string/leaf_image" />

            <TextView
                android:id="@+id/veganTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/vegan"
                applyVeganColor="@{result.vegan}"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/timeTextView"
                app:layout_constraintTop_toBottomOf="@+id/veganImageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>